Lesson 2, Instructions in README.txt & Comments

--- a/MAD Implicit/app/src/main/res/values/strings.xml
+++ b/MAD Implicit/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MAD Implicit</string>
+
+    <string name="map_string">Maps</string>
+    <string name="browser_string">Browser</string>
+    <string name="music_string">Music</string>
+    <string name="calc_string">Calculator</string>
 </resources>
